[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/states/draggable/Draggable.gd" type="Script" id=1]
[ext_resource path="res://src/states/draggable/Dragged.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/states/Touchable.tscn" type="PackedScene" id=3]

[node name="Draggable" type="Node"]
script = ExtResource( 1 )

[node name="Touchable" parent="." instance=ExtResource( 3 )]

[node name="Dragged" parent="." instance=ExtResource( 2 )]

[connection signal="touched" from="Touchable" to="." method="_on_Touchable_touched"]
[connection signal="drag_ended" from="Dragged" to="." method="_on_Dragged_drag_ended"]
[connection signal="drag_started" from="Dragged" to="." method="_on_Dragged_drag_started"]
